--- a/hugo.toml
+++ b/hugo.toml
@@ -1,16 +1,15 @@
-baseURL = "https://github.com/cullanhowlett/cullanhowlett.github.io"
+baseURL = "https://cullanhowlett.github.io"
 languageCode = "en-au"
 title = "Cullan Howlett's Personal Website"
-theme = "hugo-initio"
+theme = ""
 
 [params]
     name = "Cullan Howlett"
-    description = "Cosmologist"
+    description = "Cosmologist, Astrophysicist, Data Analyst"
     email = "c.howlett@uq.edu.au"
-    phone = "+61 "
-    address = "234 Hidden Pond Road, Ashland City, TN 37015"
+    address = "School of Mathematics and Physics, University of Queensland, St. Lucia, QLD 4067."
     year = 2023
-    avatar = "images/profile.jpg"
+    avatar = "images/ProfilePic.jpg"
     avatarclass = "circle"
     background = ""
     banner = "images/.jpg"
@@ -19,77 +18,30 @@ theme = "hugo-initio"
     author = "Sergey Pozhilov (GetTemplate.com)"
 
     showSubheader = true
-    showServices = true
-    showRecentWorks = true
-    showDownloads = true
-    showClients = true
+    showResearch = true
+    showProjects = true
 
     showFooterContact = true
     showFooterFollowMe = true
     showFooterTextWidget = true
-    showFooterFormWidget = true
 
 [[menu.main]]
     name = "home"
     url = "/"
     weight = 1
 [[menu.main]]
-    name = "blog"
-    url = "/post/"
-    weight = 5
+    name = "CV"
+    url = "/CV/"
+    weight = 2
+[[menu.main]]
+    name = "Publications"
+    url = "/Publications/"
+    weight = 3
+[[menu.main]]
+    name = "Outreach"
+    url = "/Outreach/"
+    weight = 3
 
-[params.disqus]
-    site = "hugo-initio-site.disqus.com"
-
-[params.sharethis]
-    property = "123456789012345678901234"
-    custom = true
-
-[params.google.analytics]
-    trackerID = "GA-000000000-0"
-
-[[params.social]]
-	title = "facebook"
-	url = "https://www.facebook.com/nickname"
-    icon = "fab fa-facebook-square"
-    footer = true
-    sharethis = true
-    network = "facebook"
-[[params.social]]
-	title = "twitter"
-	url = "https://twitter.com/nickname"
-    icon = "fab fa-twitter-square"
-    footer = true
-    sharethis = true
-    network = "twitter"
-[[params.social]]
-	title = "instagram"
-	url = "https://www.instagram.com/nickname"
-    icon = "fab fa-instagram"
-    footer = true
-    sharethis = false
-    network = ""
-[[params.social]]
-	title = "google+"
-	url = "https://plus.google.com/+nickname"
-    icon = "fab fa-google-plus-square"
-    footer = false
-    sharethis = true
-    network = "googleplus"
-[[params.social]]
-	title = "linkedin"
-	url = "https://www.linkedin.com/in/nickname"
-    icon = "fab fa-linkedin"
-    footer = false
-    sharethis = true
-    network = "linkedin"
-[[params.social]]
-	title = "tumblr"
-	url = "https://nickname.tumblr.com"
-    icon = "fab fa-tumblr-square"
-    footer = false
-    sharethis = false
-    network = "tumblr"
 [[params.social]]
 	title = "github"
 	url = "https://github.com/nickname"
